# bot-slack-core

./: .gitignore  BOTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.taskr/: govern.yaml  service.yaml  ship.yaml
bot_core/: __init__.py  ai.py  eval.py  runner.py  scanner.py  slack_adapter.py
docs/: preview-bot-pattern.md
slack_bot_core/: __init__.py  runner.py  scanner.py  utils.py
tests/: __init__.py  test_ai.py  test_eval.py  test_runner.py  test_scanner.py  test_slack_adapter.py  test_utils.py
